1.6.17

1.6.16
	* Fix typo in ldns_struct_pkt.opcode2str

1.6.14	2012-10-23
	* Added rich comparison methods for ldns_dname, ldns_rdf, ldns_rr and
	  ldns_rr_list classes.
	* Added deprecation warnings into ldns_rr.new_frm_fp() and
	  ldns_rr.new_frm_fp_l() and others.
	* Fixed ldns_rr.set_rdf(), which may cause memory leaks, because it
	  returns new objects (in the scope of Python). Also it leaked memory,
	  when the call was not successful.
	* Fixed ldns_get_rr_list_hosts_frm_file, marked as newobject.
	* Fixed ldns_rr_list.cat() to return bool as mentioned in documentation.
	* Fixed ldns_rr_list_cat_clone, marked as newobject.
	* Fixed ldns_rr_list.new_frm_file(). Exception argument was invalid.
	* Fixed ldns_rr_list.push_rr() to return bool as mentioned in
	  documentation.
	* Fixed ldns_rr_list.push_rr_list() to return bool as mentioned in
	  documentation.
	* Fixed ldns_rr_list.set_rr(), which caused memory corruption, double free
	  problems and memory leaks. (The wrapper used original function instead
	  of its push cloned variant which was missing.)
	* Fixed ldns_rr_list.set_rr_count(), added python exception raise in order
	  to avoid assertion failure.
	* Fixed ldns_rr_list.subtype_by_rdf(), marked as newobject.
	* Added ldns_rr.to_canonical(), ldns_rr.is_question(),
	  ldns_rr.type_by_name(), ldns_rr.class_by_name(), ldns_rr_list.new(),
	  ldns_rr.set_question().
	* Modified ldns_rr_list.owner() and ldns_rr.owner(), now returns ldns_dname.
	* Fixed assertion failures for several methods when receiving incorrect but
	  syntactically valid arguments (i.e., ldns_rr.a_address(),
	  ldns_rr.dnskey_algorithm(), ldns_rr.dnskey_flags(),
	  ldns_rr.dnskey_key(), ldns_rr.dnskey_protocol(),
	  ldns_rr.mx_exchange(), ldns_rr.mx_preference(), ldns_rr.ns_nsdname(),
	  ldns_rr.owner(), ldns_rr.rdf(), ldns_rr.rrsig_algorithm(),
	  ldns_rr.rrsig_expiration(), ldns_rr.rrsig_inception(),
	  ldns_rr.rrsig_keytag(), ldns_rr.rrsig_labels(), ldns_rr.rrsig_origttl(),