@@ -1,4 +1,6 @@
 1.6.17
+	* Method ldns_rdf.reverse() now throws an exception when not applied
+	  on dname rdfs. This is to prevent assertion fails in ldns' C code.
 
 1.6.16
 	* Fix typo in ldns_struct_pkt.opcode2str
